# transferrous

./: .gitignore  Cargo.toml  README.md  TODO.md  build.sh  test.sh
src/client/: gui-main.rs  main.rs  send_file.rs
src/server/: main.rs
test_directory/: .gitignore
testfiles/: .gitignore
