[package]
name = "transferrous"
version = "0.1.0"
authors = ["km42 <kurtmueller42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
iced = "0.1"
chrono = "0.4"

[[bin]]
name = "transferrous-server"
path = "src/server/main.rs"

[[bin]]
name = "transferrous-client"
path = "src/client/main.rs"

[[bin]]
name = "transferrous-client-gui"
path = "src/client/gui-main.rs"
